REVISIT: (#6992) Show a summary of nodes x resources on home page.
We now have a summary tab-set on the home page of the Dashboard, showing each
node and the count of "resources by state" that it contains.  This provides
users a solid summary of the state of their network at this point in time.

NOTE: This is incomplete; it needs further attention on both content and
layout before it can be considered finished.

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -3,6 +3,28 @@
   .header
     %h2 Dashboard
   .item
+    %ul#home-tabs
+      %li(id="all-tab")
+        All
+      %li(id="failed-tab")
+        Failed
+      %li(id="pending-tab")
+        Pending
+      %li(id="unresponsive-tab")
+        Unresponsive
+      %li(id="compliant-tab")
+        Compliant
+      %div.panel(id="all")
+        = render 'resource_summary', :nodes => @unhidden_nodes
+      %div.panel(id="failed")
+        = render 'resource_summary', :nodes => @currently_failing_nodes
+      %div.panel(id="pending")
+        = render 'resource_summary', :nodes => []
+      %div.panel(id="unresponsive")
+        = render 'resource_summary', :nodes => @no_longer_reporting_nodes
+      %div.panel(id="compliant")
+        = render 'resource_summary', :nodes => []
+  .item
     - if @currently_failing_nodes.present?
       .section.error
         %h3 Node failures
